src/main/java/com/example/final_project/domain/error/ExpenseErrorCode.java
package com.example.final_project.domain.error;

public enum ExpenseErrorCode {

    EXPENSE_NOT_FOUND,
    OVER_BUDGET_LIMIT,
    TITLE_TO_SHORT,
    EXPENSE_EXCEEDING_THE_BUDGET
}
